# dynmcp

./: .gitignore  Cargo.toml  LICENSE  README-CN.md  README.md
config/: example.toml
mcp-axum/: Cargo.toml
mcp-axum/config/: default.toml
mcp-axum/src/: main.rs
mcp-axum/src/error/: api_error.rs  app_error.rs
mcp-axum/src/extractor/: json_bdoy.rs  mod.rs
mcp-axum/src/handler/: admin_handler.rs  healthz_handler.rs  mcp_handler.rs  mod.rs
mcp-axum/src/middleware/: api_key_auth.rs  mod.rs
mcp-axum/src/model/: api_response.rs  app_state.rs  jsonrpc_response.rs  mod.rs  sse_response.rs
mcp-axum/src/model/vo/: ids_cmd.rs  mod.rs  tds_cmd.rs
mcp-axum/src/router/: router.rs
mcp-axum/src/utils/: etcd_helper.rs  mod.rs
mcp-common/: Cargo.toml
mcp-common/src/: lib.rs
mcp-common/src/cache/: mcp_cache.rs
mcp-common/src/config/: config.rs
mcp-common/src/constants/: constants.rs
mcp-common/src/enums/: ids_protocol_type.rs  mod.rs
mcp-common/src/etcd/: etcd_client_provider.rs  mod.rs
mcp-common/src/http_client/: http_client_provider.rs  mod.rs  model.rs
mcp-common/src/log/: log.rs
mcp-common/src/model/: http_status.rs  mod.rs
mcp-common/src/provider/: global_provider.rs  mod.rs
mcp-common/src/sse/: broadcast.rs  mod.rs  session_manager.rs
mcp-common/src/utils/: header_builder.rs  header_extractor.rs  mod.rs
mcp-common/src/xds/: ids.rs
mcp-core/: Cargo.toml
mcp-core/src/: lib.rs
mcp-core/src/cache/: mcp_cache.rs  mod.rs
mcp-core/src/error/: dyn_execute_error.rs  mod.rs
mcp-core/src/mcp/protocol/: initialize.rs  mcp_protocol.rs  mod.rs
mcp-core/src/mcp/protocol/notifications/: initialized.rs  mod.rs
mcp-core/src/mcp/protocol/tools/: call.rs  list.rs  mod.rs
mcp-core/src/model/: ids.rs  mcp_tool.rs  mod.rs  tds.rs
mcp-core/src/model/spec/: mod.rs  protocol.rs  protocol_method.rs
mcp-core/src/model/xds/: mod.rs
mcp-macro/: Cargo.toml
mcp-macro/src/: lib.rs
mcp-plugin/: Cargo.toml
mcp-plugin/src/datasource/: datasource.rs  ds_enum.rs  etcd_ds.rs  factory.rs  mod.rs  mysql_ds.rs  redis_ds.rs
