[workspace]
members = ["mcp-axum", "mcp-macro", "mcp-core", "mcp-common", "mcp-plugin"]

[workspace.dependencies]

# === Web Framework ===
axum = "0.8.4"

# === Logging and Tracing ===
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2.3"

# === Error Handling ===
anyhow = "1.0.98"
thiserror = "2.0.12"

# === Async Runtime and Traits ===
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"

# === Serialization ===
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
erased-serde = "0.4.6"

# === Concurrency and Caching ===
dashmap = "6.1.0"
once_cell = "1.21.3"
arc-swap = "1.7.1"

# === Command Line Parsing ===
clap = { version = "4.5.40", features = ["derive"] }

# === Database Access ===
sqlx = { version = "0.8.6", features = [
    "mysql",
    "chrono",
    "runtime-tokio-native-tls",
] }

# === Configuration Files ===
config = "0.15.11"

# === Time and Date Utilities ===
chrono = { version = "0.4.41", features = ["serde"] }

# === Networking ===
reqwest = { version = "0.12.20", features = ["json"] }

# === Utilities ===
bytes = "1.10.1"
ctor = "0.4.2"
derive-new = "0.7.0"
deadpool = "0.12.2"
etcd-client = "0.15.0"

# === Memory Allocator ===
mimalloc = { version = "0.1.46", features = [
    "override",
], default-features = false }

# === Procedural Macros ===
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
