[package]
name = "mcp_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-common = { path = "../mcp-common" }
mcp-plugin = { path = "../mcp-plugin" }
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
mimalloc = { version = "0.1.46", features = [
    "override",
], default-features = false }
derive-new = "0.7.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
dashmap = "6.1.0"
clap = { version = "4.5.32", features = ["derive"] }
erased-serde = "0.4.6"
