[package]
name = "mcp_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-common = { path = "../mcp-common" }
mcp-plugin = { path = "../mcp-plugin" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
mimalloc = { workspace = true }
derive-new = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
erased-serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
