[package]
name = "mcp-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_common"
path = "src/lib.rs"

[dependencies]
dashmap = "6.1.0"
etcd-client = "0.15.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2.0.12"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
serde = "1.0.219"
bytes = "1.10.1"
once_cell = "1.21.3"
arc-swap = "1.7.1"
deadpool = "0.12.2"
