[package]
name = "mcp-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_common"
path = "src/lib.rs"

[dependencies]
dashmap = { workspace = true }
etcd-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
arc-swap = { workspace = true }
deadpool = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
config = { workspace = true }
