[package]
name = "mcp-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_core"
path = "src/lib.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
mcp-macro = { path = "../mcp-macro" }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
dashmap = "6.1.0"
ctor = "0.4.2"
anyhow = "1.0.98"
serde_json = "1.0.140"
erased-serde = "0.4.6"
