[package]
name = "mcp-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_core"
path = "src/lib.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
mcp-macro = { path = "../mcp-macro" }
serde = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
ctor = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
erased-serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }